aks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dolly-api-service
spec:
  selector:
    app: dolly-api
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
