aks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dolly-api-ingress
spec:
  rules:
    - host: test1.dollyv2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dolly-api-service
                port:
                  number: 80
