aks/allow-port-8000.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-port-8000
spec:
  selector: <your-pod-selector>
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: <source-pod-selector>
      destination:
        ports:
          - ports: [8000]
